Actualizacion Tesis - Nuevo capitulo

--- a/ThesisLatex/Cap_3.tex
+++ b/ThesisLatex/Cap_3.tex
@@ -1,14 +1,37 @@
-\chapter{Propuesta}
+\chapter{Marco Teórico}
 
-En este capítulo se desarrolla toda la propuesta realizada a través de la investigación. Sigue la
-misma estructura del capítulo anterior.
+Cada capítulo deberá contener una breve introducción que describe en forma rápida el contenido del
+mismo. En este capítulo va el marco teórico. (pueden ser dos capítulos de marco teórico)
 
-El título del capítulo es flexible de acuerdo a cada tesis. Algunos títulos sugeridos podrían ser:
+\section{Sección 1 del Capítulo II}
+
+Un capítulo puede contener n secciones. La referencia bibliográfica se hace de la siguiente manera:
+\cite{Mateos00}
+
+\subsection{Sub Sección}
+
+Una sección puede contener n sub secciones.\cite{Galante01}
+
+\subsubsection{Sub sub sección}
+
+Una sub sección puede contener n sub sub secciones.
+
+\section{Recomendaciones generales de escritura}
+Un trabajo de esta naturaleza debe tener en consideración varios aspectos generales:
 
 \begin{itemize}
-\item El algoritmo X: nuestra propuesta.
-\item La técnica Y
+\item Ir de lo genérico a lo específico. Siempre hay qeu considerar que el lector podría ser alguien no muy familiar con el tema 
+y la lectura debe serle atractiva.
+\item No poner frases muy largas. Si las frases son de mas de 2 líneas continuas es probable que la lectura sea dificultosa.
+\item Las figuras, ecuaciones, tablas deben ser citados y explicados {\bf antes} de que aparezcan en el documento.
+\item Encadenar las ideas. Ninguna frase debe estar suelta. Siempre que terminas un párrafo y hay otro a continuación, 
+el primero debe dejar abierta la idea que se explicará a continuación. Todo debe tener secuencia.
 \end{itemize}
 
-Este título debe de estar ade acuerdo con el asesor del tema. Consúltelo en su sala de clase.
+
+\section{Consideraciones Finales}
+
+Cada capítulo excepto el primero debe contener al finalizarlo una sección de consideraciones que enlacen
+el presente capítulo con el siguiente.
+
 
