--- a/ThesisLatex/Tesis.tex
+++ b/ThesisLatex/Tesis.tex
@@ -23,7 +23,7 @@
 \date{14 de Octubre del 2014}
 \date{\today}
 
-\dedicado{Esto lo pondré cuadsfadsfasando lo  termine.}
+\dedicado{Esto lo pondré cuando lo  termine.}
 
 \begin{document}
 \pagestyle{fancy}
@@ -59,6 +59,7 @@
 \input{Cap_2} %Inserta el capítulo 2
 \input{Cap_3} %Inserta el capítulo 3
 \input{Cap_4} %Inserta el capítulo 4
+\input{Cap_5} %Inserta el capítulo 4
 \input{conclusiones} %Inserta el capítulo 5
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
