--- a/ThesisLatex/Cap_2.tex
+++ b/ThesisLatex/Cap_2.tex
@@ -1,4 +1,4 @@
-\chapter{Nombre del Capítulo II}
+\chapter{Estado del Arte}
 
 Cada capítulo deberá contener una breve introducción que describe en forma rápida el contenido del
 mismo. En este capítulo va el marco teórico. (pueden ser dos capítulos de marco teórico)
