Actualizacion Tesis - Abstract, Introduccion y detalles de capitulos

--- a/ThesisLatex/Cap_3.tex
+++ b/ThesisLatex/Cap_3.tex
@@ -3,7 +3,7 @@
 Cada capítulo deberá contener una breve introducción que describe en forma rápida el contenido del
 mismo. En este capítulo va el marco teórico. (pueden ser dos capítulos de marco teórico)
 
-\section{Sección 1 del Capítulo II}
+\section{Computación Cuántica}
 
 Un capítulo puede contener n secciones. La referencia bibliográfica se hace de la siguiente manera:
 \cite{Mateos00}
@@ -16,7 +16,7 @@ Una sección puede contener n sub secciones.\cite{Galante01}
 
 Una sub sección puede contener n sub sub secciones.
 
-\section{Recomendaciones generales de escritura}
+\section{Computación Evolutiva}
 Un trabajo de esta naturaleza debe tener en consideración varios aspectos generales:
 
 \begin{itemize}
@@ -28,6 +28,10 @@ y la lectura debe serle atractiva.
 el primero debe dejar abierta la idea que se explicará a continuación. Todo debe tener secuencia.
 \end{itemize}
 
+\section{Algoritmos Evolutivos de Inspiración Cuántica}
+
+Cada capítulo excepto el primero debe contener al finalizarlo una sección de consideraciones que enlacen
+el presente capítulo con el siguiente.
 
 \section{Consideraciones Finales}
 
