--- a/ThesisLatex/Resumen.tex
+++ b/ThesisLatex/Resumen.tex
@@ -1,5 +1,3 @@
 \begin{resumen}
-Aquí deberás colocar entre 100 y 150 palabras como
-máximo, el problema que intentas resolver, la
-justificación y los aportes o soluciones que planteas.
+En la presente tesis se propone una modificación del Algoritmo Evolutivo de Inspiración Cuántica (\ac{QIEA}), el cual introduce el operador de reproducción (\textit{crossover}) mediante el concepto de entrelazamiento (\textit{entanglement}) a nivel intergeneracional entre poblaciones de individuos cuánticos, con el fin de aplicar las mejoras obtenidas por un individuo inicial a otro individuo ya evolucionado tras un número de iteraciones. Debido a la combinación de mejoras, este individuo presentaría una ventaja en sus características con respecto a los demás y, por lo tanto, se asume la posibilidad de obtener mejores individuos en un menor tiempo que el algoritmo original.
 \end{resumen}
