--- a/ThesisLatex/abreviaturas.tex
+++ b/ThesisLatex/abreviaturas.tex
@@ -5,6 +5,8 @@
 \chapter*{Abreviaturas}
 
 \begin{acronym}
+\acro{QIEA}{Quantum-Inspired Evolutionary Algorithm}
+
 \acro{SPC}{Sociedad Peruana de Computación}
 \acro{CMM}{\textit{Capability Maturity Model}}
 \end{acronym}
