--- a/ThesisLatex/Abstract.tex
+++ b/ThesisLatex/Abstract.tex
@@ -1,5 +1,3 @@
 \begin{abstract}
-Here you must write between 100 and 150 words about your thesis. 
-
-In this text you must highlight your main contributions to this field.
+In this thesis, a modification of the \ac{QIEA} is proposed. This modification introduces a crossover operator through the concept of entanglement at an intergenerational level among different populations of quantum individuals with the purpose of applying the improvements obtained by a certain individual to another yet evolutioned individual after a certain number of iterations. Due to the combination of improvements, the generated individual would present advantages in comparison to its peers and therefore, the possibility of better-generating individuals in less time than the original algorithm would be feasible.
 \end{abstract}
