--- a/ThesisLatex/Cap_2.tex
+++ b/ThesisLatex/Cap_2.tex
@@ -3,7 +3,7 @@
 Cada capítulo deberá contener una breve introducción que describe en forma rápida el contenido del
 mismo. En este capítulo va el marco teórico. (pueden ser dos capítulos de marco teórico)
 
-\section{Sección 1 del Capítulo II}
+\section{Algoritmos Evolutivos de Inspiración Cuántica}
 
 Un capítulo puede contener n secciones. La referencia bibliográfica se hace de la siguiente manera:
 \cite{Mateos00}
@@ -16,7 +16,7 @@ Una sección puede contener n sub secciones.\cite{Galante01}
 
 Una sub sección puede contener n sub sub secciones.
 
-\section{Recomendaciones generales de escritura}
+\section{Aplicaciones para Algoritmos Evolutivos de Inspiración Cuántica}
 Un trabajo de esta naturaleza debe tener en consideración varios aspectos generales:
 
 \begin{itemize}
