Actualizacion Tesis - Marco Teórico Pt. 1

--- a/ThesisLatex/Bibliog.bib
+++ b/ThesisLatex/Bibliog.bib
@@ -2,6 +2,43 @@
 %
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%BIBLIOGRAPHY%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{zhang2011evolutionary,
+  title=	{Evolutionary computation meets machine learning: A survey},
+  author=	{Zhang, Jun and Zhan, Zhi-hui and Lin, Ying and Chen, Ni and Gong, Yue-jiao and Zhong, Jing-hui and Chung, Henry SH and Li, Yun and Shi, Yu-hui},
+  journal=	{Computational Intelligence Magazine, IEEE},
+  volume=	{6},
+  number=	{4},
+  pages=	{68--75},
+  year=		{2011},
+  publisher=	{IEEE}
+}
+
+@book{eiben2003introduction,
+  title=	{Introduction to evolutionary computing},
+  author=	{Eiben, Agoston E and Smith, James E},
+  year=		{2003},
+  pages=	{15--34},
+  publisher=	{springer}
+}
+
+@ARTICLE{Whitley94agenetic,
+  author = 	{Darrell Whitley},
+  title = 	{A Genetic Algorithm Tutorial},
+  journal = 	{Statistics and Computing},
+  year = 	{1994},
+  volume = 	{4},
+  pages = 	{65--85}
+}
+
+@incollection{tavares2004evolution,
+  title=	{On the evolution of evolutionary algorithms},
+  author=	{Tavares, Jorge and Machado, Penousal and Cardoso, Amilcar and Pereira, Francisco B and Costa, Ernesto},
+  booktitle=	{Genetic Programming},
+  pages=	{389--398},
+  year=		{2004},
+  publisher=	{Springer}
+}
+
 @BOOK{Bertino93,
   AUTHOR =       "E. Bertino and L. Martino",
   TITLE =        "Object Oriented Database Systems: Concepts and Architectures",
