--- a/ThesisLatex/abreviaturas.tex
+++ b/ThesisLatex/abreviaturas.tex
@@ -6,6 +6,7 @@
 
 \begin{acronym}
 \acro{QIEA}{Quantum-Inspired Evolutionary Algorithm}
+\acro{AEIC}{Algoritmo Evolutivo de Inspiración Cuántica}
 
 \acro{SPC}{Sociedad Peruana de Computación}
 \acro{CMM}{\textit{Capability Maturity Model}}
