--- a/ThesisLatex/Cap_4.tex
+++ b/ThesisLatex/Cap_4.tex
@@ -1,13 +1,16 @@
 \chapter{Propuesta}
 
-En este capÃ­tulo se desarrolla toda la propuesta realizada a travÃ©s de la investigaciÃ³n. Sigue la
-misma estructura del capÃ­tulo anterior.
+Un capítulo puede contener n secciones. La referencia bibliográfica se hace de la siguiente manera:
+\cite{zhang2011evolutionary}
 
-El tÃ­tulo del capÃ­tulo es flexible de acuerdo a cada tesis. Algunos tÃ­tulos sugeridos podrÃ­an ser:
+En este capítulo se desarrolla toda la propuesta realizada a través de la investigación. Sigue la
+misma estructura del capítulo anterior.
+
+El título del capítulo es flexible de acuerdo a cada tesis. Algunos títulos sugeridos podrían ser:
 
 \begin{itemize}
 \item El algoritmo X: nuestra propuesta.
-\item La tÃ©cnica Y
+\item La técnica Y
 \end{itemize}
 
-Este tÃ­tulo debe de estar ade acuerdo con el asesor del tema. ConsÃºltelo en su sala de clase.
+Este título debe de estar ade acuerdo con el asesor del tema. Consúltelo en su sala de clase.
