--- a/ThesisLatex/Tesis.tex
+++ b/ThesisLatex/Tesis.tex
@@ -9,6 +9,9 @@
 \usepackage{hlundef}
 \usepackage{tesis}
 \usepackage{setspace}
+\usepackage{algorithm}
+\usepackage{algorithmicx}
+\usepackage{algpseudocode}
 
 \title{Título de la Tesis}
 
@@ -23,7 +26,7 @@
 \date{14 de Octubre del 2014}
 \date{\today}
 
-\dedicado{Esto lo pondré cuando lo  termine.}
+\dedicado{Esto lo pondré cuando lo termine.}
 
 \begin{document}
 \pagestyle{fancy}
