Actualizacion Tesis - Marco Teórico Pt. 2

--- a/ThesisLatex/Bibliog.bib
+++ b/ThesisLatex/Bibliog.bib
@@ -39,6 +39,26 @@
   publisher=	{Springer}
 }
 
+@article{kicinger2005evolutionary,
+  title=	{Evolutionary computation and structural design: A survey of the state-of-the-art},
+  author=	{Kicinger, Rafal and Arciszewski, Tomasz and Jong, Kenneth De},
+  journal=	{Computers \& Structures},
+  volume=	{83},
+  number=	{23},
+  pages=	{1943--1978},
+  year=		{2005},
+  publisher=	{Elsevier}
+}
+
+@inproceedings{hinterding1997adaptation,
+  title=	{Adaptation in evolutionary computation: A survey},
+  author=	{Hinterding, Robert and Michalewicz, Zbigniew and Eiben, Agoston E},
+  booktitle=	{Evolutionary Computation, 1997., IEEE International Conference on},
+  pages=	{65--69},
+  year=		{1997},
+  organization=	{IEEE}
+}
+
 @BOOK{Bertino93,
   AUTHOR =       "E. Bertino and L. Martino",
   TITLE =        "Object Oriented Database Systems: Concepts and Architectures",
