--- a/ThesisLatex/Tesis.tex
+++ b/ThesisLatex/Tesis.tex
@@ -62,8 +62,8 @@
 \input{Cap_2} %Inserta el capítulo 2
 \input{Cap_3} %Inserta el capítulo 3
 \input{Cap_4} %Inserta el capítulo 4
-\input{Cap_5} %Inserta el capítulo 4
-\input{conclusiones} %Inserta el capítulo 5
+%\input{Cap_5} %Inserta el capítulo 5
+%\input{conclusiones} %Inserta el capítulo 6
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
