Actualizacion Tesis - Marco Teórico Pt. 3 - Finalizado Computacion Evolutiva

--- a/ThesisLatex/Bibliog.bib
+++ b/ThesisLatex/Bibliog.bib
@@ -59,6 +59,46 @@
   organization=	{IEEE}
 }
 
+@article{singulani2008computational,
+  title=	{Computational intelligence applied to the growth of quantum dots},
+  author=	{Singulani, Anderson P and Vilela Neto, Omar P and Aur{\'e}lio Pacheco, Marco C and Vellasco, Marley BR and Pires, Maur{\'\i}cio P and Souza, Patr{\'\i}cia L},
+  journal=	{Journal of Crystal Growth},
+  volume=	{310},
+  number=	{23},
+  pages=	{5063--5065},
+  year=		{2008},
+  publisher=	{Elsevier}
+}
+
+@article{zhou2011multiobjective,
+  title=	{Multiobjective evolutionary algorithms: A survey of the state of the art},
+  author=	{Zhou, Aimin and Qu, Bo-Yang and Li, Hui and Zhao, Shi-Zheng and Suganthan, Ponnuthurai Nagaratnam and Zhang, Qingfu},
+  journal=	{Swarm and Evolutionary Computation},
+  volume=	{1},
+  number=	{1},
+  pages=	{32--49},
+  year=		{2011},
+  publisher=	{Elsevier}
+}
+
+@book{romero2008art,
+  title=	{The art of artificial evolution: a handbook on evolutionary art and music},
+  author=	{Romero, Juan J and Machado, Penousal},
+  year=		{2008},
+  publisher=	{Springer}
+}
+
+@article{coello1999comprehensive,
+  title=	{A comprehensive survey of evolutionary-based multiobjective optimization techniques},
+  author=	{Coello, Carlos A Coello},
+  journal=	{Knowledge and Information systems},
+  volume=	{1},
+  number=	{3},
+  pages=	{269--308},
+  year=		{1999},
+  publisher=	{Springer}
+}
+
 @BOOK{Bertino93,
   AUTHOR =       "E. Bertino and L. Martino",
   TITLE =        "Object Oriented Database Systems: Concepts and Architectures",
