--- a/ThesisLatex/Cap_3.tex
+++ b/ThesisLatex/Cap_3.tex
@@ -3,7 +3,7 @@
 Cada capítulo deberá contener una breve introducción que describe en forma rápida el contenido del
 mismo. En este capítulo va el marco teórico. (pueden ser dos capítulos de marco teórico)
 
-\section{Computación Cuántica}https://hootsuite.com/dashboard
+\section{Computación Cuántica}
 
 Un capítulo puede contener n secciones. La referencia bibliográfica se hace de la siguiente manera:
 
@@ -19,7 +19,7 @@ Una sub sección puede contener n sub sub secciones.
 
 La computación evolutiva es una rama dependiente de la inteligencia artificial, y a su vez, una metodología de optimización inspirada en la evolución biológica y el comportamiento de organismos vivientes \cite{zhang2011evolutionary}, y comprende en sí a los algoritmos evolutivos. La computación evolutiva incluye metodologías y variantes tales como: algoritmos genéticos, estrategias evolutivas, programación genética, sistemas de clasificación mediante aprendizaje, evolución diferencial, algoritmo para la estimación de la distribución, inteligencia de enjambre, optimización por colonia de hormigas, entre otros. 
 
-Un algoritmo evolutivo por lo general comprende las siguientes ideas: dada una población de individuos, distintas circunstancias en el ambiente ejercen presión sobre los mismos provocando el fenómeno conocido como selección natural (supervivencia del más apto), causando un incremento en las aptitudes de dichos individuos. Estas circunstancias ambientales son las encargadas de realizar la medición de la aptitud de los individuos.
+Un algoritmo evolutivo es una abstracción de procesos y principios establecidos por el Darwinismo y el Neo-Darwinismo. Por lo general comprenden las siguientes ideas: dada una población de individuos, distintas circunstancias en el ambiente ejercen presión sobre los mismos provocando el fenómeno conocido como selección natural (supervivencia del más apto), causando un incremento en las aptitudes de dichos individuos. Estas circunstancias ambientales son las encargadas de realizar la medición de la aptitud de los individuos.
 
 Dada una función que mide esta calidad y la cual se busca maximizar, se genera aleatoriamente un conjunto de individuos candidatos (que podrían ser elementos en el dominio de la función) a los cuales se les aplica la función ya mencionada para medir y comparar la aptitud de cada individuo por separado. Basándonos en esta medición de aptitud, algunos de los individuos candidatos son escogidos para propiciar la siguiente generación mediante la recombinación y/o mutación. La recombinación es un operador que se aplica a dos o más candidatos-progenitor seleccionados y que permite intermezclar características de ambos produciendo como resultado a un individuo-hijo. La mutación, por otro lado, es la aplicación de un cambio puntual sobre un candidato resultando en uno distinto. Esta generación de nuevos individuos candidatos compite en aptitud -y en algunos casos, edad- con los individuos de la generación anterior por un lugar en la siguiente. Este proceso continua iterando hasta que se evalúa a algún individuo de calidad lo suficientemente alta (hallazgo de una solución) o que se llegue a un límite en el tiempo de computación \cite{eiben2003introduction}. 
 
@@ -46,13 +46,31 @@ INITIALIZE \textit{population} with random candidate solutions;
  \caption{Proceso de un algoritmo evolutivo. \cite{eiben2003introduction}} 
 \end{figure}
 
-Debido a que todas las variedades de algoritmos evolutivos siguen los lineamientos formulados tanto en el algoritmo estándar como en la Figura 3.1, las diferencias entre ellas se reducen a detalles técnicos, como el uso de cadenas de alfabetos finitos como en los algoritmos genéticos, el de árboles en la programación evolutiva, o de vectores con valores reales en las estrategias evolutivas, entre otros. Lo ideal es utilizar la representación de datos más adecuada según la naturaleza del problema a resolver. Si bien son varios los paradigmas desarrollados a partir de la computación evolutiva, son tres los más importantes: Estrategias de Evolución, Programación Evolutiva y Algoritmos Genéticos, las cuales evolucionan soluciones para problemas parametrizados. A ellas se les sumaría un cuarto paradigma: Programación Genética, el cual evoluciona los programas computacionales en sí con el fin de solucionar problemas computacionales \cite{kicinger2005evolutionary}.
+Debido a que todas las variedades de algoritmos evolutivos siguen los lineamientos formulados tanto en el algoritmo estándar como en la Figura 3.1, las diferencias entre ellas se reducen a detalles técnicos, como la forma de representar las soluciones. Lo ideal es utilizar la representación de datos más adecuada según la naturaleza del problema a resolver. Si bien son varios los paradigmas desarrollados a partir de la computación evolutiva, son tres los más importantes: Estrategias de Evolución, Programación Evolutiva y Algoritmos Genéticos, las cuales evolucionan soluciones para problemas parametrizados. A ellas se les sumaría un cuarto paradigma: Programación Genética, el cual evoluciona los programas computacionales en sí con el fin de solucionar problemas computacionales \cite{kicinger2005evolutionary}.
 
-Algunos inconvenientes que conlleva el enfoque tradicional de la computación evolutiva son: \cite{hinterding1997adaptation}
+Es necesario mencionar algunos conceptos propios de los algoritmos evolutivos, entre los cuales se encuentra al {\bf individuo} que es una solución propuesta al problema; la {\bf población} que es el conjunto de individuos a evaluar y evolucionar; la {\bf generación} que es una iteración del algoritmo en el que se evalúa la aptitud de los individuos de la población para posteriormente obtener una población nueva tras realizar cambios aplicando operadores tales como \textit{mutación} o \textit{recombinación}; el {\bf fenotipo} que son los rasgos observables de cada individuo; y el {\bf genotipo} que es la codificación genética factible de convertirse en un individuo.
+
+Los algoritmos evolutivos emplean determinadas herramientas comunes en sus distintas variables:
 \begin{itemize}
- \item Los errores del usuario al momento de ajustar los parámetros, los cuales pueden resultar en errores o en un desempeño subóptimo.
+ \item Una forma de codificar las soluciones. Esta forma varía de tal forma que podemos encontrar el uso de cadenas de alfabetos finitos como en los algoritmos genéticos, el de árboles en la programación evolutiva, o de vectores con valores reales en las estrategias evolutivas,entre otros \cite{kicinger2005evolutionary}
+ \item Una función de aptitud que depende tanto de los individuos como de la forma de evaluarlos. 
+ \item Un mecanismo de selección, el cual se basa en la aptitud.
+ \item Un conjunto de operadores para reproducir y alterar a los individuos codificados.
+\end{itemize}
+
+Los algoritmos evolutivos poseen gran cantidad de aplicaciones, entre las que podemos contar problemas de optimización \cite{coello1999comprehensive} \cite{zhou2011multiobjective}, exploración (arte evolutivo) \cite{romero2008art}, optimización de procesos químicos \cite{singulani2008computational}, entre muchos otros. Presentan gran cantidad de ventajas, entre las cuales podemos mencionar:
+\begin{itemize}
+ \item Aplicabilidad en problemas donde no hay otros métodos disponibles, ya sea por presencia de restricciones no lineales, discontinuidad, multi-modalidad, problemas de ruido, etc.
+ \item Adecuados para problemas que requieren múltiples soluciones, debido a la existencia de una población de las mismas.
+ \item Altamente paralelizables.
+\end{itemize}
+
+Por supuesto, los algoritmos evolutivos también presentan algunos inconvenientes, tales como: 
+\begin{itemize}
+ \item Los efectos que los errores del usuario pueden producir al momento de ajustar parámetros, los cuales pueden resultar en errores o en un desempeño menor que óptimo \cite{hinterding1997adaptation}.
  \item El ajuste de los parámetros puede tomar tiempo.
  \item El valor óptimo de los parámetros pueden variar durante la evolución.
+ \item No existe una garantía para hallar soluciones óptimas en un periodo de tiempo determinado, aunque para evitar ello se pueden aplicar pruebas de convergencia asimptótica.
 \end{itemize}
 
 
