Actualizacion Tesis - Marco Teórico Pt. 4 - Finalizado Estado del Arte

--- a/ThesisLatex/Cap_3.tex
+++ b/ThesisLatex/Cap_3.tex
@@ -1,7 +1,6 @@
 \chapter{Marco Teórico}
 
-Cada capítulo deberá contener una breve introducción que describe en forma rápida el contenido del
-mismo. En este capítulo va el marco teórico. (pueden ser dos capítulos de marco teórico)
+En este capítulo se examinará de forma más profunda las dos áreas de inspiración para la presente tesis: la {\bf computación cuántica} y la {\bf computación evolutiva}.
 
 \section{Computación Cuántica}
 
