Actualizacion Tesis - Marco Teórico Pt. 5 Finalizado Computacion Cuantica

--- a/ThesisLatex/Bibliog.bib
+++ b/ThesisLatex/Bibliog.bib
@@ -377,6 +377,40 @@
   publisher=	{American Scientific Publishers}
 }
 
+@book{nielsen2010quantum,
+  title=	{Quantum computation and quantum information},
+  author=	{Nielsen, Michael A and Chuang, Isaac L},
+  year=		{2010},
+  publisher=	{Cambridge university press}
+}
+
+@inproceedings{han2001analysis,
+  title=	{Analysis of quantum-inspired evolutionary algorithm},
+  author=	{Han, Kuk-Hyun and Kim, Jong-Hwan and others},
+  booktitle=	{Proceedings of the 2001 International Conference on Artificial Intelligence},
+  pages=	{727--730},
+  year=		{2001},
+  organization=	{Citeseer}
+}
+
+@article{hey1999quantum,
+  title=	{Quantum computing: an introduction},
+  author=	{Hey, Tony},
+  journal=	{Computing \& Control Engineering Journal},
+  volume=	{10},
+  number=	{3},
+  pages=	{105--112},
+  year=		{1999},
+  publisher=	{IET}
+}
+
+@book{censor1997parallel,
+  title=	{Parallel optimization: Theory, algorithms, and applications},
+  author=	{Censor, Yair},
+  year=		{1997},
+  publisher=	{Oxford University Press}
+}
+
 @BOOK{Bertino93,
   AUTHOR =       "E. Bertino and L. Martino",
   TITLE =        "Object Oriented Database Systems: Concepts and Architectures",
