Actualizacion Tesis Pt. 6 - Marco Teorico terminado

--- a/ThesisLatex/Cap_2.tex
+++ b/ThesisLatex/Cap_2.tex
@@ -8,7 +8,7 @@ El primer trabajo que realmente se puede considerar como un algoritmo evolutivo 
 
 Debido al poco tiempo de vida de este campo  -menos de tres lustros, en realidad-, el área se encuentra aún en crecimiento y sólo existen unos pocos cientos de artículos sobre el tema \cite{nowotniak2014higher}. Desde el año 2007 se ha dado un incremento notable en la investigación relacionada, concentrando esfuerzos mayoritariamente en aplicaciones, seguido por innovaciones tanto en los operadores genéticos como en las representaciones \cite{nowotniaksurvey}.
 
-En el ámbito de operadores genéticos, ya sean modificados o generalizados, se ha realizado avances tales como la implementación de estrategias de búsqueda de escala mutativa y un método de optimización de caos basado en mapas de Hénon \cite{Hao2010}, una búsqueda en la disminución de operaciones al momento de evaluar la aptitud de los individuos \cite{Malossini2008}, aplicación de rotaciones en los ángulos de las puertas lógicas cuánticas \cite{Zhang2006}, combinación con Cuadrados Latinos \cite{tsai2012improved}, generalización del q-bit para una cantidad $n$ de variables además del operador \textit{Q-gate}  \cite{alegria2014generalized}.
+En el ámbito de operadores genéticos, ya sean modificados o generalizados, se ha realizado avances tales como la implementación de estrategias de búsqueda de escala mutativa y un método de optimización de caos basado en mapas de Hénon \cite{Hao2010}, una búsqueda en la disminución de operaciones al momento de evaluar la aptitud de los individuos \cite{Malossini2008}, aplicación de rotaciones en los ángulos de las puertas lógicas cuánticas \cite{Zhang2006}, combinación con Cuadrados Latinos \cite{tsai2012improved}, generalización del qubit para una cantidad $n$ de variables además del operador \textit{Q-gate}  \cite{alegria2014generalized}.
 
 Cabe señalar también que en muchos casos se utiliza codificación cuántica binaria de la misma manera que el algoritmo original, mientras que en algunos casos se ha hecho la extensión correspondiente para utilizar valores reales \cite{qin2008real} \cite{fan2007option}.
 
