--- a/ThesisLatex/Tesis.tex
+++ b/ThesisLatex/Tesis.tex
@@ -12,6 +12,7 @@
 \usepackage{algorithm}
 \usepackage{algorithmicx}
 \usepackage{algpseudocode}
+\usepackage{amsmath}
 
 \title{Título de la Tesis}
 
