Edicion posterior al parcial

--- a/ThesisLatex/Bibliog.bib
+++ b/ThesisLatex/Bibliog.bib
@@ -411,25 +411,19 @@
   publisher=	{Oxford University Press}
 }
 
-@BOOK{Bertino93,
-  AUTHOR =       "E. Bertino and L. Martino",
-  TITLE =        "Object Oriented Database Systems: Concepts and Architectures",
-  PUBLISHER =    "Adison-Wesley Publishing Company, Inc.",
-  YEAR =         "1993",
-  address =      "Massachusetts, E.U.A.",}
+@phdthesis{da2007algoritmos,
+  title=	{Algoritmos evolutivos com inspira{\c{c}}{\~a}o qu{\^a}ntica para problemas com representa{\c{c}}{\~a}o num{\'e}rica},
+  author=	{da Cruz, AA},
+  year=		{2007},
+  school=	{PhD thesis, Departamento de Engenharia El{\'e}trica, Pontif{\i}cia Universidade Cat{\'o}lica do Rio de Janeiro, Rio de Janeiro, Brasil.(In Portuguese)}
+}
 
-@PHDTHESIS{Galante01,
-  AUTHOR =       "Galante, Renata de M.",
-  TITLE =        "Evolução de Esquemas em Bancos de Dados Orientados a Objetos com o emprego de versões",
-  SCHOOL =       "Instituto de Informática-UFRGS",
-  YEAR =         "2001",
-  month =        "Junho",}
+@book{gillespie1974,
+  title=	{A quantum mechanics primer: An Elementary Introduction to the Formal Theory of Non-relativistic Quantum Mechanics.},
+  author=	{Gillespie, D. T.},
+  year=		{1974},
+  publisher=	{John Wiley and Sons.}
+}
 
-@ARTICLE{Mateos00,
-  AUTHOR =       "Mateos, G. and García M., J and Ortín I., M",
-  TITLE =        "Inclusión de Vistas en \textsc{ODMG}",
-  JOURNAL =      "Jornadas de Ingeniería del Software y Bases de Datos {(JISBD 2000)}",
-  YEAR =         "2000",
-  pages =        "383-395",}
 
-% ---------------------------------------------------------------------
+
