--- a/ThesisLatex/Cap_4.tex
+++ b/ThesisLatex/Cap_4.tex
@@ -1,16 +1,4 @@
 \chapter{Propuesta}
 
-Un capítulo puede contener n secciones. La referencia bibliográfica se hace de la siguiente manera:
-\cite{zhang2011evolutionary}
-
-En este capítulo se desarrolla toda la propuesta realizada a través de la investigación. Sigue la
-misma estructura del capítulo anterior.
-
-El título del capítulo es flexible de acuerdo a cada tesis. Algunos títulos sugeridos podrían ser:
-
-\begin{itemize}
-\item El algoritmo X: nuestra propuesta.
-\item La técnica Y
-\end{itemize}
-
-Este título debe de estar ade acuerdo con el asesor del tema. Consúltelo en su sala de clase.
+La propuesta que presenta esta tesis busca extender el algoritmo evolutivo de inspiración cuántica original, %tomando como base la generalización del mismo para más de dos estados como se muestra en \cite{alegria2014generalized}, 
+e introducir el concepto de \textit{entrelazamiento intergeneracional} como justificación para la implementación de un operador de recombinación. Se busca introducir una versión concurrente del algoritmo base, el cual a partir de una determinada iteración $u$ combinará un Q-bit que sea parte del individuo generador de mejores soluciones con otro Q-bit de otro individuo caracterizado por entregar soluciones peores que las del resto. De esta manera, se intenta que la búsqueda de valores óptimos no se vea desviada por la tendencia a un máximo local en vez de al máximo global que se busca obtener.
