--- a/ThesisLatex/Resumen.tex
+++ b/ThesisLatex/Resumen.tex
@@ -1,3 +1,3 @@
 \begin{resumen}
-En la presente tesis se propone una modificación del Algoritmo Evolutivo de Inspiración Cuántica (\ac{QIEA}), el cual introduce el operador de reproducción (\textit{crossover}) mediante el concepto de entrelazamiento (\textit{entanglement}) a nivel intergeneracional entre poblaciones de individuos cuánticos, con el fin de aplicar las mejoras obtenidas por un individuo inicial a otro individuo ya evolucionado tras un número de iteraciones. Debido a la combinación de mejoras, este individuo presentaría una ventaja en sus características con respecto a los demás y, por lo tanto, se asume la posibilidad de obtener mejores individuos en un menor tiempo que el algoritmo original.
+En la presente tesis se propone una modificación del Algoritmo Evolutivo de Inspiración Cuántica - $\mathbb{R}$ (\ac{QIEA}), el cual introduce el operador de reproducción (\textit{crossover}) mediante el concepto de entrelazamiento (\textit{entanglement}) a nivel intergeneracional entre poblaciones de individuos cuánticos que evolucionen concurrentemente, con el fin de aplicar algunas mejoras obtenidas por un individuo inicial a otro, y de esta manera minimizar el riesgo de converger únicamente hacia un mínimo local. Con esto, se busca obtener un algoritmo más robusto y que obtenga una solución global.
 \end{resumen}
