--- a/ThesisLatex/abreviaturas.tex
+++ b/ThesisLatex/abreviaturas.tex
@@ -7,7 +7,6 @@
 \begin{acronym}
 \acro{QIEA}{Quantum-Inspired Evolutionary Algorithm}
 \acro{AEIC}{Algoritmo Evolutivo de Inspiración Cuántica}
-
-\acro{SPC}{Sociedad Peruana de Computación}
-\acro{CMM}{\textit{Capability Maturity Model}}
+\acro{PDD}{Densidad Determinada Probabilística}
+\acro{PDF}{Función Densidad Probabilística}
 \end{acronym}
