--- a/ThesisLatex/Cap_2.tex
+++ b/ThesisLatex/Cap_2.tex
@@ -10,7 +10,7 @@ Debido al poco tiempo de vida de este campo  -menos de tres lustros, en realidad
 
 En el ámbito de operadores genéticos, ya sean modificados o generalizados, se ha realizado avances tales como la implementación de estrategias de búsqueda de escala mutativa y un método de optimización de caos basado en mapas de Hénon \cite{Hao2010}, una búsqueda en la disminución de operaciones al momento de evaluar la aptitud de los individuos \cite{Malossini2008}, aplicación de rotaciones en los ángulos de las puertas lógicas cuánticas \cite{Zhang2006}, combinación con Cuadrados Latinos \cite{tsai2012improved}, generalización del qubit para una cantidad $n$ de variables además del operador \textit{Q-gate}  \cite{alegria2014generalized}.
 
-Cabe señalar también que en muchos casos se utiliza codificación cuántica binaria de la misma manera que el algoritmo original, mientras que en algunos casos se ha hecho la extensión correspondiente para utilizar valores reales \cite{qin2008real} \cite{fan2007option}.
+Cabe señalar también que en muchos casos se utiliza codificación cuántica binaria de la misma manera que el algoritmo original, mientras que en algunos casos se ha hecho la extensión correspondiente para utilizar valores reales \cite{qin2008real} \cite{fan2007option} \cite{zhao2009real}. Esto, a partir del trabajo desarrollado por \cite{da2007algoritmos} que propone un algoritmo que genera representaciones en números reales en vez de únicamente representaciones binarias como el algoritmo original.
 
 Si bien la mayoría de algoritmos evolutivos de inspiración cuántica están relacionados estrechamente a los algoritmos genéticos, hay casos en los que se ha llevado dicha inspiración a otros algoritmos evolutivos, tales como a la evolución diferencial \cite{hota2010adaptive} y a la programación genética \cite{dias2011self} \cite{dias2013quantum}.
 
