Edicion posterior al parcial - Correccion texto

--- a/ThesisLatex/Abstract.tex
+++ b/ThesisLatex/Abstract.tex
@@ -1,3 +1,3 @@
 \begin{abstract}
-In this thesis, a modification of the \ac{QIEA} $\mathbb{R}$ is proposed. This modification introduces a crossover operator through the concept of entanglement at an intergenerational level among different populations of quantum individuals parallely evolving, with the purpose of applying the improvements obtained by a certain individual to another yet evolutioned individual after a certain number of iterations, and minimize the risk of convergence towards a local optimal solution. The objective is to get more robust, global-oriented solutions.
+In this thesis, a multi-population parallelized evolution modification of the \ac{QIEA} for $\mathbb{R}$ is proposed. This modification introduces a crossover operator based on the concept of \textit{entanglement} at an intergenerational level among different populations of quantum individuals, with the purpose of applying the improvements obtained by a certain individual to another yet evolutioned individual after a certain number of iterations, so in this way we become able to minimize the risk of convergence towards a local optimal solution.
 \end{abstract}
