--- a/ThesisLatex/Cap_2.tex
+++ b/ThesisLatex/Cap_2.tex
@@ -1,6 +1,6 @@
 \chapter{Estado del Arte}
 
-Mientras que los primeros estudios sobre computación cuántica fueron propuestos en la década de los ochenta \cite{benioff1980} \cite{benioff1982quantum}, el primer trabajo sobre técnicas de inteligencia computacional de inspiración cuántica recién fue presentado hacia finales de la década de los noventa \cite{narayanan1996quantum}. A diferencia de los ``auténticos'' algoritmos cuánticos \cite{grover1996fast} \cite{shor1994algorithms}, los algoritmos de inspiración cuántica no requieren de una computadora cuántica para ser implementados, sino que implementan niveles adicionales de aleatoriedad inspirados en conceptos y principios de la computación cuántica, tales como los \textit{qubits}, la \textit{interferencia} o la \textit{superposición de estados} \cite{nowotniaksurvey}. 
+Mientras que los primeros estudios sobre computación cuántica fueron propuestos en la década de los ochenta \cite{benioff1980} \cite{benioff1982quantum}, el primer trabajo sobre técnicas de inteligencia computacional de inspiración cuántica recién fue presentado hacia finales de la década de los noventa \cite{narayanan1996quantum}. A diferencia de los ``auténticos'' algoritmos cuánticos tales como el algoritmo de Grover \cite{grover1996fast} o el algoritmo de Shor \cite{shor1994algorithms}, los algoritmos de inspiración cuántica no requieren de una computadora cuántica para ser implementados, sino que implementan niveles adicionales de aleatoriedad inspirados en conceptos y principios de la computación cuántica, tales como los \textit{qubits}, la \textit{interferencia} o la \textit{superposición de estados} \cite{nowotniaksurvey}. 
 
 El primer trabajo que realmente se puede considerar como un algoritmo evolutivo de inspiración cuántica fue presentado en el año 2001 \cite{han2000genetic}, el mismo que presenta el algoritmo evolutivo de inspiración cuántica base. Es acá cuando se introducen los conceptos de qubits y superposición de estados, además de la representación de individuos basados en el concepto de qubits. Se tratarán estos conceptos con mayor profundidad en el siguiente capítulo.
 
