--- a/ThesisLatex/Cap_3.tex
+++ b/ThesisLatex/Cap_3.tex
@@ -8,27 +8,27 @@ La computación cuántica es un paradigma de computación que surge en contraposici
 
 La potencia disponible en la computación clásica está ligada directamente al tamaño de los transistores que componen sus chips. Actualmente, el tamaño de dichos transistores ya está aproximándose a la escala de nanómetros, lo cual limita el aumento de ciclos por reloj para los procesadores, motivo por el cual el foco en la computación clásica ha cambiado para concentrarse en campos como la paralelización \cite{censor1997parallel}.
 
-Es aquí donde la computación cuántica muestra sus posibilidades. A diferencia del paradigma tradicional donde la unidad básica es el bit, en la computación cuántica la unidad básica es el \textit{qubit}. La diferencia entre el bit tradicional y el qubit es que mientras el primero sólo puede almacenar un único valor (ya sea este 0 o 1), el segundo puede contener 0, 1 o una superposición de ambos valores, fenómeno al que se llama \textit{superposición de estados}. Es esta superposición de estados la que permite asumir una cantidad simultánea de valores a la vez, y por lo tanto desarrollar una cantidad fantástica de operaciones simultáneas en vez de la única simultánea que permite la computación clásica \cite{nielsen2010quantum}.
+Es aquí donde la computación cuántica muestra sus posibilidades. A diferencia del paradigma tradicional donde la unidad básica es el bit, en la computación cuántica la unidad básica es el \textit{qubit}. La diferencia entre el bit tradicional y el qubit es que mientras el primero sólo puede almacenar un único valor (ya sea este 0 o 1), el segundo puede contener 0, 1 o una superposición de ambos valores, fenómeno al que se llama \textit{superposición de estados}. Es esta superposición de estados la que permite asumir una cantidad simultánea de valores a la vez, y por lo tanto desarrollar una cantidad fantástica de operaciones simultáneas en vez de la única que permite la computación clásica \cite{nielsen2010quantum}.
 
-Esta diferencia (que se evidencia en la representación de un algoritmo cuántico mediante máquinas de Turing cuánticas en vez de las tradicionales) presenta posibilidades poco imaginables hasta hace poco. Si se lograra construir un computador cuántico y ejecutar en él algoritmos que aprovechen su poder, se podría llegar al extremo de ejecutar tareas de complejidad no-polinomial para un ordenador tradicional (problemas NP-completos). Sin embargo, los avances científicos en el campo todavía no han llegado al punto de poder generar un prototipo práctico de computador cuántico, por lo que sus propiedades continúan siendo más una posibilidad que un hecho \cite{han2001analysis}.
+Esta diferencia (que se evidencia en la representación de algoritmos cuánticos mediante máquinas de Turing cuánticas en vez de las tradicionales) presenta posibilidades poco imaginables hasta hace poco. Si se lograra construir un computador cuántico y ejecutar en él algoritmos que aprovechen su poder, se podría llegar al extremo de ejecutar tareas de complejidad no-polinomial para un ordenador tradicional (problemas NP-completos). Sin embargo, los avances científicos en el campo todavía no han llegado al punto de poder generar un prototipo práctico de computador cuántico, por lo que sus propiedades continúan siendo más una posibilidad que un hecho \cite{han2001analysis}.
 
-Además de ello, cabe resaltar que para aprovechar toda la potencia de procesamiento que un ordenador cuántico podría ofrecer, se deberá disponer de algoritmos cuánticos que empleen los conceptos relacionados a la computación cuántica. Por ahora se tienen algunos ejemplos como el algoritmo de Shor (para descomponer un número en factores polinomiales) \cite{shor1994algorithms} o el de Grover (para buscar una secuencia no ordenada de datos con N componentes) \cite{grover1996fast}, entre otros. Basta ver, por ejemplo, el algoritmo de Shor, que demuestra que el poder de la computación cuántica es tal que podría acabar con el campo de la criptografía tradicional al ser capaz de romper algoritmos de encriptación como RSA.
+Además de ello, cabe resaltar que para aprovechar toda la potencia de procesamiento que un ordenador cuántico podría ofrecer, se deberá desarrollar algoritmos cuánticos que empleen los conceptos relacionados a la computación cuántica. Por ahora, se tienen algunos ejemplos como el algoritmo de Shor (para descomponer un número en factores polinomiales) \cite{shor1994algorithms} o el de Grover (para buscar una secuencia no ordenada de datos con N componentes) \cite{grover1996fast}, entre otros. Basta ver, por ejemplo, el algoritmo de Shor, que demuestra que el poder de la computación cuántica es tal que podría acabar con el campo de la criptografía tradicional al ser capaz de romper algoritmos de encriptación como tales como RSA.
 
 Dado que los algoritmos cuánticos ``auténticos'' son por ahora inaplicables en la vida real, se ha buscado adaptar distintos conceptos de la computación cuántica a otras áreas para poder aprovechar algunas de sus ventajas en la computación tradicional. De esos intentos surge la computación evolutiva de inspiración cuántica, la cual se explica posteriormente en este capítulo.
 
-La unidad básica de un computador cuántico de dos estados es llamado bit cuántico o \textit{qubit}, el cual puede encontrarse en el estado '0', en el estado '1' o en una superposición de ambos. Se puede representar su estado como:
+La unidad básica de un computador cuántico de dos estados es el llamado bit cuántico o \textit{qubit}, el cual puede encontrarse en un estado `0', un estado `1' o en una superposición de ambos. Se puede representar este estado como:
 
 \begin{equation}
  \arrowvert\Psi\rangle = \alpha\textbar0\rangle + \beta\arrowvert1\rangle 
 \end{equation}
 
-donde $\alpha$ y $\beta$ son valores complejos que representan las amplitudes de probabilidad de ambos estados. Por lo tanto, $\arrowvert\alpha\arrowvert^2$ es la probabilidad que el valor del qubit sea de '0' al observarlo, y $\arrowvert\beta\arrowvert^2$ la probabilidad correspondiente para el valor '1'. La normalización del estado garantiza que se cumpla:
+donde $\alpha$ y $\beta$ son valores complejos que representan las amplitudes de probabilidad de ambos estados. Por lo tanto, $\arrowvert\alpha\arrowvert^2$ es la probabilidad que el valor del qubit sea de `0' al observarlo, y $\arrowvert\beta\arrowvert^2$ la probabilidad correspondiente para el valor `1'. La normalización del estado garantiza que se cumpla:
 
 \begin{equation}
  \arrowvert\alpha\arrowvert^2 + \arrowvert\beta\arrowvert^2 = 1 
 \end{equation}
 
-De existir un sistema de $m$-qubits, éste puede representar tanta información como $2^m$ estados a la vez. Sin embargo, al observar el qubit, este colapsa y asume un estado único.
+De existir un sistema de $m$-qubits, éste puede representar tanta información como $2^m$ estados a la vez. Sin embargo, al observar el qubit, la superposición del mismo colapsa, asumiendo así un estado único.
 
 \section{Computación Evolutiva}
 
@@ -91,45 +91,57 @@ Por supuesto, los algoritmos evolutivos también presentan algunos inconvenientes
 
 \section{Algoritmo Evolutivo de Inspiración Cuántica}
 
-El algoritmo evolutivo de inspiración cuántica original fue descrito originalmente en \cite{han2000genetic} y posteriormente analizado \cite{han2001analysis}. Como se puede ver en el capítulo anterior, han surgido buen número de variaciones y aplicaciones, todos basados en el original que se describe a continuación:
+Los algoritmos evolutivos de inspiración cuántica buscan aprovechar los paradigmas de la física cuántica para mejorar su rendimiento al resolver problemas. Para la formulación de un algoritmo de inspiración cuántica se debe cumplir con los siguientes requerimientos:
 
-\ac{QIEA} emplea una representación denominada Q-bit -la cual equivale al qubit que puede representar a uno los valores $\{0,1\}$ o a la superposición de ambos-, el cual está definida por un par de número $[\alpha,\beta]$ tal que:
+\begin{itemize}
+ \item Tener una representación numérica o un método para convertir en representación numérica.
+ \item Determinar una configuración inicial.
+ \item Definir una condición de finalización.
+ \item Dividir el problema en sub-problemas más simples.
+ \item Identificar el número de universos (estados de superposición).
+ \item Cada sub-problema debe asociarse a un universo.
+ \item Los cálculos deben ser independientes en cada universo.
+ \item Debe haber alguna interacción entre universos, y ésta debe, al menos permitir hallar la solución, o ayudar a que cada sub-problema en cada universo sea capaz de encontrarla. 
+\end{itemize}
 
-\[
+
+El algoritmo evolutivo de inspiración cuántica original fue descrito originalmente en \cite{han2000genetic} y posteriormente analizado \cite{han2001analysis}. Como se puede ver en el capítulo anterior, han surgido buen número de variaciones y aplicaciones, todos basados en el original descrito a continuación.
+
+\ac{QIEA} emplea una representación denominada Q-bit -la cual equivale al qubit que puede representar ya sea a uno de los valores $\{0,1\}$ o a la superposición de ambos-, el cual está definida por dos valores $[\alpha,\beta]$
+
+\begin{equation}
   \begin{bmatrix}
     \alpha \\        
     \beta \\      
   \end{bmatrix}
-\]
+\end{equation}
 
-donde $\arrowvert\alpha\arrowvert^2 + \arrowvert\beta\arrowvert^2 = 1 $, y que hacen referencia a las posibilidades de que el Q-bit colapse a uno de los dos valores posibles al momento de ser observado. De la misma forma se puede definir un vector de $m$ Q-bits de esta forma:
+donde $\arrowvert\alpha\arrowvert^2 + \arrowvert\beta\arrowvert^2 = 1 $, y que hacen referencia a la probabilidad que el Q-bit colapse -ya sea a uno o a otro- de los dos estados posibles al momento de ser observado. De la misma forma se puede definir un vector de $n$ Q-bits de esta forma:
 
-\[
+\begin{equation}
   \begin{bmatrix}
-    \alpha_1 & \alpha_2 & ... & \alpha_m \\        
-    \beta_1 & \beta_2 & ... &  \beta_m \\      
-    \beta_1 & \beta_2 & ... &  \beta_m \\      
+    \alpha_1 & \alpha_2 & ... & \alpha_n \\        
+    \beta_1 & \beta_2 & ... &  \beta_n \\      
   \end{bmatrix}
-\]
+\end{equation}
 
-donde $\arrowvert\alpha_i\arrowvert^2 + \arrowvert\beta_i\arrowvert^2 = 1 $ para cada $i = 0, 1, ..., m$.
+donde también se cumple $\arrowvert\alpha_j\arrowvert^2 + \arrowvert\beta_j\arrowvert^2 = 1  \forall  j = 0, 1, ..., n$.
 
 % AGREGAR DETALLE SOBRE COMO UN INDIVIDUO Q-BIT CON TRES PARES DE AMPLITUDES PUEDE ALMANCENAR TANTA INFORMACIÓN COMO 8 INDIVIDUOS NORMALES
 
 Para modificar los Q-bits se emplea un operador denominado Q-gate, el cual se encarga de rotar el ángulo y hacerlo inclinarse hacia un valor $\{0,1\}$, de tal manera que asegure el cumplimiento de la ecuación 3.2:
 
-\[
-U(\Delta\theta_i)=
+\begin{equation}
+ U(\Delta\theta_i)=
   \begin{bmatrix}
     \cos(\Delta\theta_i) & -\sin(\Delta\theta_i) \\        
     \sin(\Delta\theta_i) & \cos(\Delta\theta_i) \\      
   \end{bmatrix}
-\]
+\end{equation}
 
 donde $\Delta\theta_i, i=0,1,...,m$ es el ángulo de rotación de cada Q-bit. La magnitud de este valor tiene efecto en la convergencia, pero de ser muy alto se corre el riesgo de diverger o de converger prematuramente hacia un óptimo local.
 
-
-\[
+\begin{equation}
    \begin{bmatrix}
     \alpha'_i \\        
     \beta'_i \\      
@@ -138,12 +150,12 @@ U(\Delta\theta_i)
    \begin{bmatrix}
     \alpha_i \\        
     \beta_i \\      
-  \end{bmatrix}
-\]
+  \end{bmatrix} 
+\end{equation}
 
 \begin{figure}
  \centering
- \includegraphics[scale=0.9,keepaspectratio=true]{./Figure2.png}
+ \includegraphics[scale=0.7,keepaspectratio=true]{./Figure2.png}
  % Figure2.png: 446x471 pixel, 96dpi, 11.80x12.46 cm, bb=0 0 334 353
  \caption{Rotación del ángulo al momento de la aplicación del operador Q-gate}
 \end{figure}
@@ -204,6 +216,7 @@ De tal forma, se obtiene una población de individuos cuánticos $Q_t = {q_1 ,... 
 
 \section{Consideraciones Finales}
 
+Según se ha visto, el algoritmo evolutivo de inspiración cuántica original es sencillo y de implementación relativamente rápida, mientras que el algoritmo para $\mathbb{R}$ sube ligeramente el listón en términos de inspiración pero añadiendo nuevas capacidades a las posibilidades de la inspiración cuántica. Se tomará este algoritmo como punto de partida para la propuesta que se desarrolla en el siguiente capítulo, el cual busca introducir un nuevo mecanismo de recombinación (\textit{crossover}) en un entorno concurrente de ejecución con más de una población cuántica generadora.
 Según se ha visto, el algoritmo evolutivo de inspiración cuántica original es sencillo y de implementación relativamente rápida, mientras que el algoritmo para $\mathbb{R}$ sube ligeramente el listón en términos de inspiración pero añadiendo nuevas capacidades a las posibilidades de la inspiración cuántica. Se tomará este algoritmo como punto de partida para la propuesta que se desarrolla en el siguiente capítulo, el cual busca introducir un nuevo mecanismo de recombinación (\textit{crossover}) en un entorno concurrente de ejecución con más de una población cuántica generadora.
 
 
