--- a/ThesisLatex/Resumen.tex
+++ b/ThesisLatex/Resumen.tex
@@ -1,3 +1,3 @@
 \begin{resumen}
-En la presente tesis se propone una modificación del Algoritmo Evolutivo de Inspiración Cuántica - $\mathbb{R}$ (\ac{QIEA}), el cual introduce el operador de reproducción (\textit{crossover}) mediante el concepto de entrelazamiento (\textit{entanglement}) a nivel intergeneracional entre poblaciones de individuos cuánticos que evolucionen concurrentemente, con el fin de aplicar algunas mejoras obtenidas por un individuo inicial a otro, y de esta manera minimizar el riesgo de converger únicamente hacia un mínimo local. Con esto, se busca obtener un algoritmo más robusto y que obtenga una solución global.
+En la presente tesis se propone una modificación multipoblacional de evolución paralelizada del Algoritmo Evolutivo de Inspiración Cuántica (QIEA) para $\mathbb{R}$, el cual introduce un operador de reproducción (\textit{crossover}) basado en el concepto de entrelazamiento (\textit{entanglement}) a nivel intergeneracional entre las diversas poblaciones de individuos cuánticos, con el fin de aplicar algunas mejoras obtenidas por un individuo a otro ya evolucionado tras un determinado número de iteraciones, y de esta manera minimizar el riesgo de converger únicamente hacia un óptimo local.
 \end{resumen}
